Import of BECKUS/WebShortcutUtil-0.11 from CPAN.
gitpan-cpan-distribution: WebShortcutUtil
gitpan-cpan-version:      0.11
gitpan-cpan-path:         BECKUS/WebShortcutUtil-0.11.tar.gz
gitpan-cpan-author:       BECKUS
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-WebShortcutUtil version 0.10
-============================
+WebShortcutUtil
+===============
 
 Perl module for reading and writing web shortcut files.
 This module is part of the WebShortcutUtil suite.  For more details
