--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension WebShortcutUtil.
 
+0.11  Tue Jun 19 20:00:00 2013
+    - Updated metadata for CPAN.
+    - Fixed compile error in WebShortcutUtil::Write module which
+      occurred on versions of Perl older than 5.14.0.
+
 0.10  Tue Jun 18 16:00:00 2013
     - Initial beta version for CPAN
 
